# TestNdk2

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/zdh/testndk2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cn/zdh/testndk2/: MainActivity.java
app/src/test/java/cn/zdh/testndk2/: ExampleUnitTest.java
